--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,17 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Lato, Helvetica, Arial, sans-serif;
+  background: rgb(255, 255, 255);
+  font-size: 14px;
+    line-height: 1.4285em;
+    color: rgba(0,0,0,.87);
 }
+.hidden{
+  overflow: hidden;
+  
+}
+
 
 a {
   color: inherit;
