--- a/styles/LayoutHeader.module.scss
+++ b/styles/LayoutHeader.module.scss
@@ -7,6 +7,7 @@
   font-size: 1em;
   background-color: white;
   color: rgba(0, 0, 0, 0.87);
+  z-index: 23;
 }
 .containerDark{
   background-color: black;
