--- a/styles/assetsCoin.module.scss
+++ b/styles/assetsCoin.module.scss
@@ -1,12 +1,12 @@
-.header,.headerDark {
+.header,
+.headerDark {
   background-image: linear-gradient(
     to right,
     rgb(63, 81, 181),
     rgb(100, 181, 246)
-    
   );
-  color:white ;
-  padding: 2em ;
+  color: white;
+  padding: 2em;
   .container {
     display: flex;
     align-items: center;
@@ -24,7 +24,7 @@
           position: relative;
           display: inline-block;
           width: 25%;
-          .left_header_rank__flag{
+          .left_header_rank__flag {
             background: rgb(24, 198, 131);
             border-bottom-right-radius: 1rem;
             border-bottom-left-radius: 1rem;
@@ -34,104 +34,101 @@
             width: auto;
             display: inline-block;
             box-shadow: rgb(0 0 0 / 40%) 0px 2px 15px -3px;
-            &::before{
-                content: "";
-                width: calc(100% + 20px);
-                height: 10px;
-                background: inherit;
-                position: absolute;
-                left: -10px;
-                top: 0px;
-                border-radius: 8px;
+            &::before {
+              content: "";
+              width: calc(100% + 20px);
+              height: 10px;
+              background: inherit;
+              position: absolute;
+              left: -10px;
+              top: 0px;
+              border-radius: 8px;
             }
-            p{
-                
-                font-size: 0.7rem;
+            p {
+              font-size: 0.7rem;
             }
           }
         }
         .left_header_name {
-            padding: 1rem;
+          padding: 1rem;
           flex-direction: column;
           vertical-align: top;
           align-self: flex-start !important;
           width: 75%;
-          h1{
+          h1 {
             margin-top: 0;
-        }
-          h2{
+          }
+          h2 {
             display: inline-block;
             margin: 0px;
             vertical-align: bottom;
-            span{
-                font-weight: 700;
+            span {
+              font-weight: 700;
             }
-            div{
-                display: inline-block;
-        margin: 0 0 0 16px   ;
-        line-height: 1;
-        vertical-align: bottom;
-        font-size: 1rem;
-        font-weight: 900;
-              }
+            div {
+              display: inline-block;
+              margin: 0 0 0 16px;
+              line-height: 1;
+              vertical-align: bottom;
+              font-size: 1rem;
+              font-weight: 900;
+            }
           }
-    
         }
       }
     }
     .right_header {
-      width: 56.25% ;
-      .right_header_container{
+      width: 56.25%;
+      .right_header_container {
         display: block;
       }
-      .right_header_row{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: inherit;
-    align-items: stretch;
-    max-width: 100%!important;
-    padding: 1rem 0;
-    
-    .right_header_colum{
-      margin-top: 0;
-    margin-bottom: 0;
-    position: relative;
-    flex: 0 0 150px;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    vertical-align: top;
-    .right_header_colum__section{
-      font-size: 1.28571429em;
-      margin-top: -0.14285714em;
-      margin: calc(2rem - 0.14285714em) 0 1rem;
-      padding: 0;
-      font-weight: 700;
-      line-height: 1.28571429em;
-      div{
-        font-size: 1rem;
-        display: block;
-    font-weight: 400;
-    padding: 0;
-    margin: 0;
-    line-height: 1.2em;
-      }
-      span{
-        font-size: 1em;
-      }
-    }
-    }
+      .right_header_row {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: inherit;
+        align-items: stretch;
+        max-width: 100% !important;
+        padding: 1rem 0;
+
+        .right_header_colum {
+          margin-top: 0;
+          margin-bottom: 0;
+          position: relative;
+          flex: 0 0 150px;
+          padding-left: 1rem;
+          padding-right: 1rem;
+          vertical-align: top;
+          .right_header_colum__section {
+            font-size: 1.28571429em;
+            margin-top: -0.14285714em;
+            margin: calc(2rem - 0.14285714em) 0 1rem;
+            padding: 0;
+            font-weight: 700;
+            line-height: 1.28571429em;
+            div {
+              font-size: 1rem;
+              display: block;
+              font-weight: 400;
+              padding: 0;
+              margin: 0;
+              line-height: 1.2em;
+            }
+            span {
+              font-size: 1em;
+            }
+          }
+        }
       }
     }
   }
 }
-.headerDark{
+.headerDark {
   background: rgb(54, 54, 54);
   border-bottom: 3px solid rgba(0, 0, 0, 0.4);
-  .right_header_colum__section{
-    div{
+  .right_header_colum__section {
+    div {
       opacity: 0.7;
-    
     }
   }
 }
@@ -142,27 +139,28 @@
     margin-right: auto !important;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px){
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .container {
-    width: calc(933px + 2rem)!important;
+    width: calc(933px + 2rem) !important;
     margin-left: auto !important;
     margin-right: auto !important;
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px){
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .container {
-    width: calc(723px + 2rem)!important;
+    width: calc(723px + 2rem) !important;
     margin-left: auto !important;
     margin-right: auto !important;
   }
 }
-@media (max-width: 768px){
-  .headerDark{
+@media (max-width: 768px) {
+  .headerDark {
     padding: 2em 1em;
     .left_header_name {
-      h1,span{
-       margin-left: 0.5em;
+      h1,
+      span {
+        margin-left: 0.5em;
       }
     }
   }
@@ -170,25 +168,82 @@
     width: auto !important;
     margin: 0 auto !important;
     padding-top: 2rem !important;
-   display: block !important;
-   .left_header,
-    .right_header{
+    display: block !important;
+    .left_header,
+    .right_header {
       width: 100% !important;
     }
-    .right_header_row{
+    .right_header_row {
       width: 100% !important;
     }
-    
   }
 }
-@media (max-width: 380px){
-
+@media (max-width: 380px) {
   .left_header_name {
-    h1{
+    h1 {
       font-size: 1.5em !important;
     }
   }
-  .right_header_colum{
+  .right_header_colum {
     flex: 0 0 100px !important;
+  }
+}
+
+// MIDDLE PAGE (STYLE)
+
+.middle {
+  .middle_container {
+    max-width: 100% !important;
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .grafic {
+      flex: 1 1 50%;
+      overflow: hidden;
+      padding-bottom: 20px;
+      .listitem_grafic {
+        padding-top: 0.21428571em;
+        padding-bottom: 0.21428571em;
+        .buttonGrafic {
+          background: transparent;
+          color: rgb(24, 198, 131);
+          border-radius: 10em;
+          font-size: 0.78571429rem;
+          cursor: pointer;
+          margin: 0 0.25em 0 0;
+          padding: 0.78571429em 1.5em;
+          font-weight: 700;
+          line-height: 1em;
+          border: none;
+          transition: all 0.2s;
+          &:hover {
+            background: rgb(24, 198, 131);
+            color: white;
+          }
+        }
+        .active {
+          background: rgb(24, 198, 131);
+          color: white;
+        }
+      }
+    }
+    .swap {
+      display: flex;
+      -webkit-box-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      justify-content: center;
+      flex: 1 1 0%;
+      min-width: 380px;
+      width: 100%;
+    }
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .middle_container {
+    width: 1127px;
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
 }
