--- a/styles/swap.module.scss
+++ b/styles/swap.module.scss
@@ -265,7 +265,102 @@
     background-color: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0 / 9%) 0px 0px 30px -3px;
     z-index: 5;
+    .header_show{
+      padding:20px 20px 0px !important;
+      margin: 0 !important;
+    }
+    .section_exchanges_all{
+      margin: 0px auto;
+    padding: 1em;
+    display: flex;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    justify-content: center;
+    overflow-y: scroll;
+    color: rgba(0, 0, 0, 0.637);
+    &::-webkit-scrollbar {
+      width: 5px; /* ширина для вертикального скролла */
+      height: 8px; /* высота для горизонтального скролла */
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: gray;
+      border-radius: 9em;
+      box-shadow: inset 1px 1px 10px #f3faf7;
+    }
+    .section_exchanges_item{
+      display: flex;
+    margin-bottom: 10px;
+    padding-left: 15px;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    width: 31%;
+    flex-wrap: nowrap;
+    font-weight: 600;
+    overflow: hidden;
+    position: relative;
+    input {
+     display: none;
+   
+}
+label{
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none; 
 
+  &::before{
+    display: inline-block;
+    content:'';
+    width: 15px;
+    height: 15px;
+    border:1px solid gray;
+    border-radius:3px;
+    margin-right: 2px;
+    transition: all 0.25s;
+  }
+}
+    input[type = "checkbox"]:checked + label::before{
+      display: inline-block;
+      content:'✓';
+      line-height: 1;
+      font-weight: bold;
+      text-align: center;
+      color:white;
+      background-color:rgb(24, 198, 131);
+      border-radius:3px;
+      margin-right: 2px;
+      padding: 2px;
+      
+    }
+  
+    }
+    }
+    .section_exchanges_settings{
+      display: flex;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+    padding: 12px 17px;
+    color: rgba(0, 0, 0, 0.9);
+    font-size: 15px;
+    font-weight: 500;
+    margin-top: 0px;
+    border-top: 1px solid rgb(236, 239, 241);
+    span{
+      font-weight: bold;
+    }
+    button{
+      padding: 4px 8px !important;
+    }
+    }
     .header_show {
       display: flex;
       -webkit-box-pack: justify;
@@ -339,7 +434,11 @@
   }
 }
 .swapDark {
+
   .show_container{
+  .section_exchanges_all,.section_exchanges_settings{
+    color:white !important;
+  }
     .inputRate,.multitop{
       color:rgba(255, 255, 255, 0.9) !important;
       input{
