--- a/styles/tableCoins.module.scss
+++ b/styles/tableCoins.module.scss
@@ -199,7 +199,7 @@
       }
     }
 }
-.container_footer_markets_table{
+.container_footer_markets_table,.exchanges_container{
   thead{
       
     tr{
