--- a/styles/tableCoins.module.scss
+++ b/styles/tableCoins.module.scss
@@ -7,14 +7,18 @@
   }
 }
 
+.container{
+  background-color: white;
 
+}
 .container,
 .containerDark {
   white-space: nowrap;
  position: relative;
+ border-radius: 10px;
  top:-140px;
   table {
-   border-radius: 10px;
+   
     border-collapse: collapse;
     line-height: 4;
     thead {
@@ -36,7 +40,7 @@
     position: relative;
     width: 100%;
     box-shadow: rgb(0 0 0 / 40%) 0px 2px 15px -3px !important;
-    background-color: white;
+   
     tbody {
       tr {
         transition: all 0.2s;
@@ -95,8 +99,10 @@
   }
 }
 .containerDark {
+  background-color: rgb(54, 54, 54) !important;
   table {
     thead {
+      background-color: black;
       th {
         border-bottom: 1px solid black;
         background-color: black;
@@ -107,7 +113,7 @@
       }
     }
     tbody {
-        background: rgb(54, 54, 54);
+      background: rgb(54, 54, 54) !important;
       tr {
         td{
             border-bottom: 1px solid rgba(0, 0, 0, 0.3); 
@@ -136,12 +142,21 @@
 .containerDark {
   top: 3em;
   table{
-    line-height: 3;
+    line-height: 3 !important;
    .left_align{
     padding-left: 1em;
    }
   }
 }
+}
+.exchanges_container{
+  .container,
+  .containerDark {
+    table{
+      line-height: 3 !important;
+  
+    }
+  }
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px){
   .container,
@@ -199,7 +214,7 @@
       }
     }
 }
-.container_footer_markets_table,.exchanges_container{
+.container_footer_markets_table{
   thead{
       
     tr{
@@ -227,6 +242,32 @@
         &:nth-child(4){
           padding-right: 1em;
         }
+    }
+
+  }
+}
+.exchanges_container{
+  thead{
+      
+    tr{
+      th{
+        &:nth-child(1),&:nth-child(4),&:nth-child(6),&:nth-child(7){
+          display: none !important;
+        }
+        &:nth-child(2),&:nth-child(3),&:nth-child(5){
+          display: table-cell !important
+        }
+      }
+    }
+  }
+  tbody{
+    td{
+      &:nth-child(1),&:nth-child(4),&:nth-child(6),&:nth-child(7){
+        display: none !important;
+      }
+      &:nth-child(2),&:nth-child(3),&:nth-child(5){
+        display: table-cell !important
+      }
     }
 
   }
