--- a/styles/tableCoins.module.scss
+++ b/styles/tableCoins.module.scss
@@ -95,7 +95,7 @@
   }
   .button_main {
     text-align: center;
-    margin: 2em auto;
+    margin-bottom: 10em auto !important;
   }
 }
 .containerDark {
