--- a/styles/assetsCoin.module.scss
+++ b/styles/assetsCoin.module.scss
@@ -8,7 +8,7 @@
     rgb(100, 181, 246)
   );
   color: white;
-  padding: 2em;
+  padding: 2em 10em !important;
   .container {
     display: flex;
     align-items: center;
