--- a/styles/assetsCoin.module.scss
+++ b/styles/assetsCoin.module.scss
@@ -8,7 +8,7 @@
     rgb(100, 181, 246)
   );
   color: white;
-  padding: 2em 10em !important;
+  padding: 2em !important;
   .container {
     display: flex;
     align-items: center;
@@ -192,11 +192,6 @@
   .right_header_colum {
     flex: 0 0 100px !important;
   }
-  .header,
-.headerDark,.middle,
-.middleDark {
-  margin-right: -1em;
-}
 }
 
 // MIDDLE PAGE (STYLE)
