--- a/styles/swap.module.scss
+++ b/styles/swap.module.scss
@@ -527,3 +527,9 @@ label{
     margin: 4em -0.3em 0 0 !important
   }
 }
+@media only screen and (max-width: 400px){
+  .swap,
+.swapDark{
+  min-width: 200px;
+}
+}
