--- a/app/components/ui/table/table.module.scss
+++ b/app/components/ui/table/table.module.scss
@@ -7,36 +7,57 @@
   }
 }
 @mixin dn_coins {
-  &:nth-child(1),&:nth-child(4),&:nth-child(5),&:nth-child(6),&:nth-child(7){
+  &:nth-child(1),
+  &:nth-child(4),
+  &:nth-child(5),
+  &:nth-child(6),
+  &:nth-child(7) {
     display: none;
   }
-  &:nth-child(2){
+  &:nth-child(2) {
     padding-left: 1em;
   }
 }
 @mixin dn_coins_exchanges {
-  
-  &:nth-child(3),&:nth-child(5),&:nth-child(6){
+  &:nth-child(3),
+  &:nth-child(5),
+  &:nth-child(6) {
     display: none;
   }
-  &:nth-child(1){
+  &:nth-child(1) {
     padding-left: 1em;
   }
-  &:nth-child(4){
+  &:nth-child(4) {
+    padding-right: 1em;
+  }
+}
+@mixin dn_exchanges {
+  &:nth-child(1),
+  &:nth-child(4),
+  &:nth-child(6),
+  &:nth-child(7) {
+    display: none;
+  }
+  &:nth-child(2) {
+    padding-left: 1em;
+  }
+  &:nth-child(5) {
     padding-right: 1em;
   }
 }
 $color: white;
 $colorDark: black;
 $backgroundDark: rgb(54, 54, 54);
-.coins{
+.coins,
+.exchanges {
   top: -140px;
 }
-.exchangeCoins{
-  .left_align{
+.exchangeCoins {
+  .left_align {
     padding-left: 1em;
   }
 }
+
 .container {
   background-color: $color;
   table {
@@ -60,14 +81,14 @@ $backgroundDark: rgb(54, 54, 54);
   white-space: nowrap;
   position: relative;
   border-radius: 10px;
-  .button_main{
+  .button_main {
     text-align: center;
     padding: 2em 0;
   }
-  .moreDetails{
+  .moreDetails {
     text-align: center;
   }
-  
+
   table {
     cursor: pointer;
     width: 100%;
@@ -88,12 +109,10 @@ $backgroundDark: rgb(54, 54, 54);
         transition: all 0.2s;
         &:hover {
           background: rgba(0, 0, 0, 0.144) !important;
-         
         }
       }
       td {
         @include tdth_padding_right;
-        
       }
     }
     .rigth_align {
@@ -157,29 +176,34 @@ $backgroundDark: rgb(54, 54, 54);
     @include margin_auto;
     top: 0 !important;
     width: auto !important;
- 
   }
-  .coins{
-
-    th{
-      @include dn_coins
+  .coins {
+    th {
+      @include dn_coins;
     }
-    td{
-      @include dn_coins
+    td {
+      @include dn_coins;
     }
-    .table_info_coin{
-      td{
-         display: table-cell !important;
+    .table_info_coin {
+      td {
+        display: table-cell !important;
       }
-     
     }
-}
-.exchangeCoins{
-  th{
-    @include dn_coins_exchanges
   }
-  td{
-    @include dn_coins_exchanges
+  .exchangeCoins {
+    th {
+      @include dn_coins_exchanges;
+    }
+    td {
+      @include dn_coins_exchanges;
+    }
   }
-}
+  .exchanges {
+    th {
+      @include dn_exchanges;
+    }
+    td {
+      @include dn_exchanges;
+    }
+  }
 }
